syntax = "proto3";

package dird.protobuf;

// forked from https://github.com/v2fly/v2ray-core/blob/a1ee432d290598a6bc85de11281b6c97573310aa/app/router/routercommon/common.proto

// IP for routing decision, in CIDR form.
message CIDR {
  // IP address, should be either 4 or 16 bytes.
  bytes ip = 1;
  // Number of leading ones in the network mask.
  uint32 prefix = 2;
  string ip_addr = 68000;
}

message GeoIP {
  string country_code = 1;
  repeated CIDR cidr = 2;
  bool inverse_match = 3;
}

message GeoIPList {
  repeated GeoIP entry = 1;
}
